fix: Wrong color variables in ScrollPanel demo

--- a/src/app/showcase/components/scrollpanel/scrollpaneldemo.scss
+++ b/src/app/showcase/components/scrollpanel/scrollpaneldemo.scss
@@ -7,7 +7,7 @@
 
     &.custombar1 {
         .p-scrollpanel-wrapper {
-            border-right: 9px solid var(--layer-1);
+            border-right: 9px solid var(--surface-ground);
         }
 
         .p-scrollpanel-bar {
@@ -16,19 +16,19 @@
             transition: background-color .2s;
 
             &:hover {
-                background-color: #007ad9;
+                background-color: var(--primary-400);
             }
         }
     }
 
     &.custombar2 {
         .p-scrollpanel-wrapper {
-            border-right: 9px solid var(--layer-1);
-            border-bottom: 9px solid var(--layer-1);
+            border-right: 9px solid var(--surface-ground);
+            border-bottom: 9px solid var(--surface-ground);
         }
 
         .p-scrollpanel-bar {
-            background-color: var(--layer-2);
+            background-color: var(--surface-border);
             border-radius: 0;
             opacity: 1;
             transition: background-color .2s;
